# qrc

./: .gitignore  .gitmodules  flake.nix  pyproject.toml
.devenv/: profile
qrc/: calibrate.py  cli.py  run.py
run/: README.md  cal.bash  cal.py  card.bash  card.yml  circuit.bash  circuit.py  readout-char.yml  sbatch.sh
runcards/: fine_tune_x.py  fine_tune_x.sh  fine_tune_x.yml  string-targets.yml
var/: README.md
