[tool.poetry]
name = "qrc"
version = "0.1.0"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fabric = "^3.2.2"
click = { version = "^8.1.7", optional = true }

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ipython = "^8.12.0"
qibolab = { path = "qibolab", develop = true, extras = [
  "qm",
  "zh",
  "rfsoc",
  "los",
] }
qibocal = { path = "qibocal", develop = true }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.3"

[tool.poetry.scripts]
qrc = "qrc.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
